# FinSight-AI

./: .gitignore  CAHIER_CHARGES.md  CORRECTIONS_FINALES.md  CORRECTIONS_MESSAGES_ERREUR.md  DOCUMENTATION_TECHNIQUE.md  DOCUMENTATION_TECHNIQUE_MANAGER.md  Dockerfile  ETAT_PROJET.md  FLASK_GUIDE.md  GUIDE_CLES_API.md  GUIDE_EXECUTION.md  GUIDE_GEMINI_API.md  GUIDE_UTILISATEUR.md  LICENSE  Makefile  PRESENTATION_COMMERCIALE.md  PROJET_COMPLET.md  QUICKSTART.md  README.md  README_FLASK.md  app.py  docker-compose.yml  env.template  generate_secret_key.py  pyproject.toml  requirements.txt  run_flask.py  setup.py
.github/workflows/: ci_cd.yml
src/: __init__.py
src/agents/: __init__.py  finance_agent.py  tools.py
src/data/: __init__.py  alpha_vantage.py  sec_edgar.py
src/rag/: __init__.py  ingestion.py  retrieval.py
src/ui/: __init__.py  components.py  dashboard.py
src/web/: __init__.py
src/web/routes/: __init__.py  api.py  chat.py  dashboard.py
static/css/: main.css
static/js/: chatbot.js  main.js
templates/: 404.html  500.html  base.html  dashboard.html  documents.html
tests/: __init__.py  conftest.py  test_alpha_vantage.py  test_rag.py  test_sec_edgar.py
tools/: debug_nodes.py  debug_rag_init.py  debug_rag_query.py  show_rag_response.py
